--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "start": "npm run build-client & node index.js",
     "dev": "npm run dev-client & npm run start-redis && cross-env ENV='development' nodemon index.js",
     "dev-peer": "cross-env GENERATE_PEER_PORT='true' ENV='dev-peer' nodemon index.js",
-    "start-redis": "redis-server --daemonize yes",
+    "start-redis": "redis-server",
     "build-client": "npm run clean && parcel build client/src/index.html --out-dir client/dist",
     "dev-client": "npm run clean && parcel client/src/index.html --out-dir client/dist",
-    "clean": "rm -rf .cache client/dist"
+    "clean": "rimraf .cache client/dist"
   },
   "jest": {
     "testEnvironment": "node"
@@ -22,7 +22,8 @@
   "devDependencies": {
     "cross-env": "^5.2.1",
     "jest": "^25.5.4",
-    "nodemon": "^2.0.9"
+    "nodemon": "^2.0.9",
+    "rimraf": "^3.0.2"
   },
   "dependencies": {
     "@babel/core": "^7.12.9",
