--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "npm run build-client & node index.js",
     "dev": "npm run dev-client & npm run start-redis && cross-env ENV='development' nodemon index.js",
     "dev-peer": "cross-env GENERATE_PEER_PORT='true' ENV='dev-peer' nodemon index.js",
-    "start-redis": "redis-server",
+    "start-redis": "redis-server --daemonize yes",
     "build-client": "npm run clean && parcel build client/src/index.html --out-dir client/dist",
     "dev-client": "npm run clean && parcel client/src/index.html --out-dir client/dist",
     "clean": "rimraf .cache client/dist"
